--- a/fenna-files/packages.sty
+++ b/fenna-files/packages.sty
@@ -12,6 +12,7 @@
 %%%SPACING/BREAKING%%%
 \OnehalfSpacing*
 \sloppy%%%overfull%%%
+\setlength{\footnotesep}{.6\baselineskip}%spacing between footnotes
 \usepackage{float}%%place tables exactly there with H
 \raggedbottom %%do not spread content over page
 %%%SPACING/BREAKING%%%
