--- a/excluding-the-third-pattern.tex
+++ b/excluding-the-third-pattern.tex
@@ -2,85 +2,44 @@
 
 \chapter{The derivations of the patterns}\label{ch:relativization}
 
-As I have shown in the previous chapter, there are two types of languages with case competition possible:
-(1) a language like Gothic or Old High German, in which the case competition always takes place
-(2) a language like Modern German, in which the case competition only takes place when the internal case can win. If not, there is no grammatical result
+In the previous chapter I showed that languages with case competition come in two variants. First, there are languages that allow the internal and external case to surface when they win the competition, such as Gothic and Old High German. Second, there are languages that only allow the internal case to surface when it wins the competition, such as Modern German. Crucially, there is no language that only allows the external case to surface when it wins the competition.
 
-Crucially, there exist no language in which case competition only takes place when the external case can win. This would be a language which is the opposite of Modern German. How can we model such a difference between languages?
+The aim of this chapter is twofold. First, I discuss how the non-existence of the external-only pattern can be explained. Second, I discuss how the difference between internal-and-external languages and internal-only languages can be derived. I introduce both matters a bit more in this introduction.
 
-Every speaker of a language needs to learn what the pattern for its language is. Headless relatives are infrequent, is what can be said about at least Modern German. Even though not everybody likes the construction to begin with (they prefer (light-)headed relatives), people seem to have the clear intuition that \tsc{int}>\tsc{ext} is much better than the other way around. It seems implausible that learners of German learn this pattern from the few examples they got (there are just too few to make a generalization). Still, the intuition exist. And it is very particular: more complex case wins over less complex case, but only if the internal case is more complex than the external case. This already sounds hard to learn from the input as a generalization.
+I start with the non-existence of the external-only pattern. blablabla
 
-People have also been describing it like this: formulation from Cinque in his book. (which is actually wrong)
-
-If it does not come from the input, where does it come from? I claim that it comes from other properties of the language. In Grosu's terminology: is it derived or basic? Ideally, we would want it to be derived.
+Let me now turn to the matter of crosslinguistic differences. Every speaker of a language needs to learn what the pattern for its language is. Headless relatives are infrequent, is what can be said about at least Modern German. Even though not everybody likes the construction to begin with (they prefer (light-)headed relatives), people seem to have the clear intuition that \tsc{int}>\tsc{ext} is much better than the other way around. It seems implausible that learners of German learn this pattern from the few examples they got (there are just too few to make a generalization). Still, the intuition exist. And it is very particular: more complex case wins over less complex case, but only if the internal case is more complex than the external case. This already sounds hard to learn from the input as a generalization. People have also been describing it like this: formulation from Cinque in his book. If it does not come from the input, where does it come from? I claim that it comes from other properties of the language. In Grosu's terminology: is it derived or basic? Ideally, we would want it to be derived.
 
 A similar avenue was pursued by \citealt{himmelreich2017}. She specific languages for having different types of agree (up, down) and different types of probes (active, non-active). Doing that, she successfully derived free relatives and parasitic gaps in different languages. Grosu 1994 linked richness of inflection to liberality. He actually talked about the richness of pro.
 
-The crucial difference with I'm doing is that I'm not relying on an arbitrary value I assigned to a language (say null head is active probe, probing only happens upwards). Instead, I look for patterns within the languages themselves, and let the facts of the headless relatives follow from those. To be more specific, I derive the different behaviors from relative pronouns. I decompose them, and I determine what parts of syntactic structure they correspond to. Having independently done that, I return to the headless relatives, and I derive the facts.
+The crucial difference with I'm doing is that I'm not relying on an arbitrary value I assigned to a language (say null head is active probe, probing only happens upwards). Like I briefly mentioned in Chapter \ref{ch:decomposition}, Nanosyntax models crosslinguistic variation as differences in the lexicon, how the features are packaged together differently. That means that I look for patterns within the languages themselves, and let the facts of the headless relatives follow from those. Specifically, I derive the different behaviors from relative pronouns and the external head that I introduce in this chapter.
 
-In this chapter I show that there are different derivations for these languages:
+In Section \ref{sec:internal-wins} I discuss the situation in which the internal case wins the competition and the relative pronoun surfaces in the internal case. This situation is attested in all languages with case competition: the internal-only ones, such as Modern German, and the internal-and-external ones, such as Gothic and Old High German. I start with showing that relative pronouns are always part of the relative clause. That is why the relative pronoun also takes the internal case, the case assigned in the relative clause. Then, I introduce an element that appears external to the relative clause that carries the external case. This is needed to allow for the comparison between the internal and external case, and to allow for languages like Polish, that do not allow for any case mismatches. The existence of this element is independently motivated by languages that overtly show it. I show that this head contains a subset of the features that the internal head contains. If the case features on the external element are then also a subset of the case features on the internal element, the internal element element can delete the external one. For instance, \tit{wem} deletes \tit{en}.
 
-
-
-Proposal of wh in a nutshell: the wh-relative is part of the relative clause. that's why it takes the internal case. I argue for an external head, that carries the external case. This head is also necessary to distinguish Modern German from languages like Polish. The relative pronoun deletes the external head.
-
-Proposal of d in a nutshell: the analysis here is partly identical to the one for Modern German wh-relatives. d-relative is also part of the relative clause, and it can take the internal case, and it deletes the external head. Additionally, there can be a d, d-combination, and the relative pronoun is deleted under c-command under containment.
+In Section \ref{sec:external-wins} I discuss the situation in which the external case wins the case competition and the relative pronoun surfaces in the external case. This situation is not attested in all of the case competition languages. This situation arises if the external head contains all case features of the internal head. In addition, and this is what distinguishes the internal-and-external languages from the internal-only languages, the features of the relative pronoun are a subset of the features of the external head. So, \tit{em} cannot delete \tit{wen}, but \tit{dem} can delete \tit{den}.
 
 From these two proposals follows that it is impossible to have third pattern, which is indeed also not attested. When the external case wins over the internal one, there is a situation in which the external case could delete the internal one. So, it is impossible to have the second option but not the first one.
 
-% So, we have seen that relative pronouns are sensitive to the internal case and to the external case. In this chapter we go back to what this means for the `head' in headless relatives. In headless relatives this head is namely missing. Like I said in the introduction, there are several ways of interpreting that.
 
-% In this section I discuss the matter whether it is actually the relative pronoun or the head of the relative clause that surfaces in headless relatives. I argue that for Modern German it is always the relative pronoun in the relative clause that surfaces. This follows from the fact that Modern German has \tsc{wh}-pronouns as relative pronouns in its headless relatives. In Gothic and Old High German it is sometimes the relative pronoun and sometimes the (light) head of the relative clause that surfaces as relative pronoun. This is a consequence of the \tsc{d}-morphology of the relative pronoun in Old High German and Gothic.
+\section{The internal wins pattern}\label{sec:internal-wins}
 
-% I connect this behavior of Modern German headless relatives to the shape of its relative pronouns. Modern German has \tsc{wh}-pronouns as relative pronouns in headless relative constructions. In this section I show that it is a consequence of having \tsc{wh}-pronouns as relative pronouns that the internal case can only surface as winner in the case competition. The different behavior of Gothic and Old High German headless relatives follows from the \tsc{d}-pronoun these languages use as their relative pronouns.
+This section discusses the situation in which the external case wins the case competition and the relative pronoun surfaces in the internal case.
 
-% In both types of languages, I analyze it as if there was a head, but it is phonologically empty/deleted. I show that this allows me to make a distinction between German and languages like Polish, that do not allow for the case competition as German does. OHG and Gothic also independently show that they can be derived from a double element structure.
-
-
-
-\section{The internal wins pattern}
-
-% My claim: the behavior in Modern German headless relatives is a consequence of its \tsc{wh}-morphology.
-
-In this section I discuss headless relatives in Modern German. Modern German only allows the relative pronoun only to surface in the internal case, not in the external case. The relative pronoun used in headless relatives in this language is a \tsc{wh}-pronoun. I show in this section that syntactically it is part of the relative clause but that the relative pronoun is sensitive to both the internal and external case.
-
-Modern German differs crucially from Gothic and Old High German in that its headless relative are only grammatical when the internal case wins the case competition over the external case. In other words, the relative pronoun can only surface in the internal case, i.e. the case of the relative clause. This seems to indicate that the relative pronoun is part of the relative clause.
-
-This can be modelled as follows:
+Examples of this situation in the three languages under discussion are these:
 
 \exg. Uns besucht \tbf{wen} \tbf{Maria} \tbf{mag}.\\
  we.\ac{acc} visit.3\ac{sg}\scsub{[nom]} \tsc{rel}.\ac{acc}.\tsc{an} Maria.\ac{nom} like.3\ac{sg}\scsub{[acc]}\\
- `Who visits us, Maria likes.' \flushfill{adapted from \pgcitealt{vogel2001}{343}}\label{ex:mg-nom-acc-wen}
+ `Who visits us, Maria likes.' \flushfill{adapted from \pgcitealt{vogel2001}{343}}\label{ex:mg-int}
+\bg. thíz ist \tbf{then} \tbf{sie} \tbf{zéllent}\\
+ \ac{dem}.\ac{sg}.\ac{n}.\ac{nom} be.\ac{pres}.3\ac{sg}\scsub{[nom]} \ac{rel}.\ac{sg}.\ac{m}.\ac{acc} 3\ac{pl}.\ac{m}.\ac{nom} tell.\ac{pres}.3\ac{pl}\scsub{[acc]}\\
+ `this is the one whom they talk about' \flushfill{Old High German, \ac{otfrid} III 16:50}\label{ex:ohg-int}
+\bg. \tbf{þan} \tbf{-ei} \tbf{frijos} siuks ist\\
+ \ac{rel}.\ac{sg}.\ac{m}.\ac{acc} -\ac{comp} love.\ac{pres}.2\ac{sg}.\scsub{[acc]} sick be.\ac{pres}.3\ac{sg}\scsub{[nom]}\\
+ `the one whom you love is sick' \flushfill{Gothic, \ac{john} 11:3, adapted from \pgcitealt{harbert1978}{342}}\label{ex:gothic-int}
 
- \ex.
- \begin{forest} boom
-[
-	 	[CP, s sep=20mm
-       [\ac{acc}P,
-			 tikz={
-			 \node[label=below:\tit{wen},
-			 draw,circle,
-			 scale=0.85,
-			 fit to=tree]{};
-			 }
-           [\tsc{f2}]
-           [\tsc{nomP}
-               [\tsc{f1}]
-               [XP
-                   [\phantom{xxx}, roof]
-               ]
-           ]
-       ]
-			 [VP
-			 		 [\tit{Maria mag}, roof]
-			 ]
-		]
-]
- \end{forest}
+I start by looking at Modern German, so the example in \ref{ex:mg-int}. The section is set up like this:
 
-The structure shows an accusative in the relative clause. An \tsc{acc}P by definition contains a \tsc{nom}P, so the nominative is there.
-
-We also understand that the other way around does not work: a nominative in the relative clause does not contain an accusative.
+At the end, I show that this analysis can also be applied to Old High German and Gothic.
 
 
 \subsection{Relative pronouns in the relative clause}
@@ -144,11 +103,35 @@ In conclusion, extraposition facts show, independently of the case facts, that t
 
 The previous section showed that the relative pronoun in a Modern German headless relative is syntactically part of the relative clause. The analysis is as follows: the relative pronoun (part of the relative clause) takes the case of the predicate in the relative clause. The sentence is grammatical if the external case is contained in the relative clause case.
 
-The opposite does not work: if the external case is not contained in the relative clause, that case requirement cannot be satisfied. The external case cannot fly into the relative clause.
+\ex.
+\begin{forest} boom
+[
+   [CP, s sep=20mm
+      [\ac{acc}P,
+      tikz={
+      \node[label=below:\tit{wen},
+      draw,circle,
+      scale=0.85,
+      fit to=tree]{};
+      }
+          [\tsc{f2}]
+          [\tsc{nomP}
+              [\tsc{f1}]
+              [XP
+                  [\phantom{xxx}, roof]
+              ]
+          ]
+      ]
+      [VP
+          [\tit{Maria mag}, roof]
+      ]
+   ]
+]
+\end{forest}
 
-Now there are two problems, to subjects that need more said about them.
+Now there are two problems, two subjects that need more said about them.
 
-(1) we keep talking about this external case. Is this part of the derivation as well? Because it is clear that somehow reference needs to be made to it. So far we have this picture: no external case yet. %First, normally there is a single DP connected to a predicate. Here there is a single DP, the relative pronoun, that is connected to both of the predicates. Or, it is first connected to the clause it is in, but then there is this `secondary' relationship.
+(1) An important requirement here is that the external case is less complex than the internal one! Is this part of the derivation as well? Because it is clear that somehow reference needs to be made to it. So far we have this picture: no external case yet. %First, normally there is a single DP connected to a predicate. Here there is a single DP, the relative pronoun, that is connected to both of the predicates. Or, it is first connected to the clause it is in, but then there is this `secondary' relationship.
 
 (2) why do not all languages behave like Modern German? Where is space for differences between languages? For Gothic and Old High German we are still ok, because we also allow for this type of case attraction there. But how about a language like Polish, that does not allow for it? How can this type of case attraction be excluded?
 
@@ -161,7 +144,7 @@ In this section I first lay out these two problems in more detail. The next sect
 
 The first open issue with the analysis in X is how the relative pronoun gets access to the external case.
 
-The relative pronoun in Modern German headless relatives is sensitive to both the internal and the external case. Consider the examples in \ref{ex:mg-internal}. In both sentences, the internal case is accusative, because the predicate in the relative clause \tit{mögen} `to like' takes accusative objects. The external case differs between the two sentences. In \ref{ex:mg-dat-acc-wen} the external case is dative, because the predicate \tit{vertrauen} `to trust' takes dative objects.  In \ref{ex:mg-nom-acc-wen}, the external case is nominative, because \tit{besuchen} `to visit' takes nominative subjects.
+The relative pronoun in Modern German headless relatives is sensitive to both the internal and the external case. Consider the examples in \ref{ex:mg-internal}. In both sentences, the internal case is accusative, because the predicate in the relative clause \tit{mögen} `to like' takes accusative objects. The external case differs between the two sentences. In \ref{ex:mg-dat-acc-wen} the external case is dative, because the predicate \tit{vertrauen} `to trust' takes dative objects.  In \ref{ex:mg-int}, the external case is nominative, because \tit{besuchen} `to visit' takes nominative subjects.
 
 \ex.\label{ex:mg-internal}
 \ag. *Ich vertraue wen \tbf{auch} \tbf{Maria} \tbf{mag}. \\
@@ -169,11 +152,11 @@ I.\ac{nom} trust.1\ac{sg}\scsub{[dat]} \tsc{rel}.\ac{acc}.\tsc{an} also Maria.\a
 `I trust whoever Maria also likes.' \flushfill{adapted from \pgcitealt{vogel2001}{345}}\label{ex:mg-dat-acc-wen}
 \bg. Uns besucht \tbf{wen} \tbf{Maria} \tbf{mag}.\\
  we.\ac{acc} visit.3\ac{sg}\scsub{[nom]} \tsc{rel}.\ac{acc}.\tsc{an} Maria.\ac{nom} like.3\ac{sg}\scsub{[acc]}\\
- `Who visits us, Maria likes.' \flushfill{adapted from \pgcitealt{vogel2001}{343}}\label{ex:mg-nom-acc-wen-rep}
+ `Who visits us, Maria likes.' \flushfill{adapted from \pgcitealt{vogel2001}{343}}\label{ex:mg-int-rep}
 
-The sentence in \ref{ex:mg-dat-acc-wen} is ungrammatical, and the one in \ref{ex:mg-nom-acc-wen} is not. The internal case cannot be the source of ungrammaticality, because the relative clauses are identical regarding case, i.e. they both take accusative. The external case differs, however. In Chapter X I showed that headless relatives in Modern German are (just like e.g. Gothic) sensitive to the case scale: \tsc{nom} < \tsc{acc} < \tsc{dat}.
+The sentence in \ref{ex:mg-dat-acc-wen} is ungrammatical, and the one in \ref{ex:mg-int} is not. The internal case cannot be the source of ungrammaticality, because the relative clauses are identical regarding case, i.e. they both take accusative. The external case differs, however. In Chapter X I showed that headless relatives in Modern German are (just like e.g. Gothic) sensitive to the case scale: \tsc{nom} < \tsc{acc} < \tsc{dat}.
 
-\ref{ex:mg-dat-acc-wen} is grammatical, because the internal accusative case wins over the external nominative. \ref{ex:mg-nom-acc-wen} is ungrammatical, because the internal accusative case cannot win the case competition over the external dative. It can be concluded that the relative pronoun in Modern German headless relatives cares about both the internal and the external case.
+\ref{ex:mg-dat-acc-wen} is grammatical, because the internal accusative case wins over the external nominative. \ref{ex:mg-int} is ungrammatical, because the internal accusative case cannot win the case competition over the external dative. It can be concluded that the relative pronoun in Modern German headless relatives cares about both the internal and the external case.
 
 In sum, even though the relative pronoun in Modern German headless relatives is always part of the relative clause, the relative pronoun also takes the external case into account. That means that the relative pronoun needs to have access to the main clause case. I propose that this can be achieved by introducing an external head to the relative clause. In Section X I show how this solves the issue.
 
@@ -183,7 +166,6 @@ In sum, even though the relative pronoun in Modern German headless relatives is 
 The second issue with the analysis in X is how to disallow the Modern German pattern for other languages.
 
 In Chapter X I showed that there are also languages that do not show case competition. Polish is an example of a language that only allows for headless relatives when the internal and the external case match (or when the relative pronoun is syncretic for these cases). The language is so-called `strictly matching'.
-
 
 \ex.
 \ag. *Jan ufa kogokolkwiek wpuścil do domu.\\
@@ -399,7 +381,7 @@ Finnish is like German because its light-headed relatives also add some definite
 
 
 
-\section{The external wins pattern}
+\section{The external wins pattern}\label{sec:external-wins}
 
 main clause more complex: full double-headed structure, deletion of element in speccp
 
